	* Histogram result saved in rain_vs_years.h


2025-10-30 Marie-Philine Hebel  <ma3648he@student.lu.se>

	Added a standard deviation to the temp_vs_years class

	*The standard deviation for all the temperature values is computed for each year and added to the plot 
	*The plot without the standard deviation still exists. 


2025-10-30 Dominique Iris de Boer  <do6140de-s@student.lu.se>

	Added third graph to plot

	* Added to my histogram function to make a third graph of the first two combined


2025-10-30 Marie-Philine Hebel  <ma3648he@student.lu.se>

	Updated main. Now all functions are called at once.


2025-10-30 Dominique Iris de Boer  <do6140de-s@student.lu.se>

	Created a README


2025-10-30 Ivana Varsányiová <iv1308va@student.lu.se>

	Updated chanelog, cleaned up datasets

	* Added changes to this change log
	* Moved files date_list.txt, temp_list.txt and time_list.txt from the main repository to the datasets subrepository
	* Deleted file smhi-opendata_5_53430_20251024_082317.csv from the datasets repository


2025-10-30 Kiam Persson <li8211pe-s@student.lu.se>

	Clang-formatted the remaining sourcefiles

	* Formatted using the Google-style.
	* Formatted src/rain_given_day.cxx src/temp_vs_years.cxx and src/temp_given_day.cxx
	* Removed src/practice.cxx


2025-10-30 Marie-Philine Hebel  <ma3648he@student.lu.se>

	Updated ChangeLog and Workplan. 

	* I added my part of the Workplan (from Google docs) to the Worklan in this directory. 


2025-10-30 Dominique Iris de Boer  <do6140de-s@student.lu.se>

	Updated ChangeLog, Workplan and perfected combined graph

	* Made some final changes to my last graph
	* Added the piece on data for a given day from our shared google doc to workplan.md
	* Updated the Changelog with everything from today

2025-10-30 Marie-Philine Hebel  <ma3648he@student.lu.se>

	The plots are now being saved in plots/.

	* edited the path in the cxx files
	* updated ChangeLog
