@@ -1,4 +1,7 @@
 Einar Elén <einar.elen@fysik.lu.se>
 Florido Paganelli <florido.paganelli@fysik.lu.se>
 
+Dominique Iris de Boer  <do6140de-s@student.lu.se>
 Marie-Philine Hebel <ma3648he-s@student.lu.se>
+Kiam Persson <li8211pe-s@student.lu.se>
+Ivana Varsányiová <iv1308va@student.lu.se>
